# lambda-battle

./: .eslintrc.json  .gitignore  .terraform.lock.hcl  Makefile  README.md  cdk.json  main.tf  package-lock.json  package.json  terraform.tfstate
.terraform/: terraform.tfstate
.terraform/modules/: modules.json
k6/: Dockerfile  Makefile  package-lock.json
k6-scenarios/: package.json
k6/scenarios/: sequential.js
lambdas/ruby-3.2/: Gemfile
lambdas/ruby-3.2/src/: func.rb
lib/: lambda-battle-stack.ts
lib/common/compute/lambda/ruby-2.7/src/: func.rb
lib/resources/: apigateway.ts  database.ts  index.ts  lambdas.ts
ruby-2.7/: main.tf
ruby-2.7/src/: func.rb
ruby-yjit-3.2/: main.tf
ruby-yjit-3.2/src/: func.rb
rust-1.65/: Cargo.toml  Dockerfile  Makefile  README.md  main.tf
rust-1.65/src/: bad_response.rs  body_string.rs  iteration.rs  main.rs  store.rs  validate_request.rs
test/: lambda-battle.test.ts
