[package]
name = "lambda-battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
log = "0.4"
lambda_http = "0.7.1"
aws-sdk-dynamodb = "0.21.0"
aws-config = "0.51.0"
